zap-deploy-stable.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: zap

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zap
    app.kubernetes.io/name: owasp-zap
  name: zap-owasp-zap
  namespace: zap
spec:
  ports:
    - port: 8081
      protocol: TCP
  selector:
    app.kubernetes.io/instance: zap
    app.kubernetes.io/name: owasp-zap
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: zap
    app.kubernetes.io/name: owasp-zap
  name: zap-owasp-zap
  namespace: zap
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zap
      app.kubernetes.io/name: owasp-zap
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zap
        app.kubernetes.io/name: owasp-zap
    spec:
      containers:
        - command:
            - sh
            - '-c'
            - >-
              /bin/bash /zap/zap.sh -daemon -port 8081 -host 0.0.0.0 -config
              api.disablekey=true -config api.addrs.addr.name=.* -config
              api.addrs.addr.regex=true
          image: 'ghcr.io/zaproxy/zaproxy:stable'
          imagePullPolicy: IfNotPresent
          name: owasp-zap
          ports:
            - containerPort: 8081
              name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zap-owasp-zap
  namespace: zap
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: zap-owasp-zap
                port:
                  number: 8081
            path: /
            pathType: Prefix
